# onnx-diagnostic

./: .coveragerc  .gitignore  CHANGELOGS.rst  LICENSE.txt  MANIFEST.in  README.rst  clean_onnx.sh  codecov.yml  k.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
.github/workflows/: check-release.yml  check-urls.yml  ci.yml  documentation.yml  model.yml  models.yml  models448.yml  mypy.yml  pyrefly.yaml  python-publish.yml  spell-check.yml  wheels-any.yml
_doc/: conf.py  index.rst  patches.rst
_doc/_static/: custom.css
_doc/api/: cache_helper.rst  helper.rst  index.rst
_doc/cmds/: compare.rst  index.rst  partition.rst  sbs.rst  validate.rst
_doc/examples/: plot_dump_intermediate_results.py  plot_export_hub_codellama.py  plot_export_locate_issue.py  plot_export_tiny_llm.py  plot_export_tiny_llm_dim01.py  plot_export_tiny_llm_dim01_onnx.py  plot_export_tiny_llm_dim01_onnx_custom.py  plot_export_tiny_llm_method_generate.py  plot_export_tiny_llm_patched.py  plot_export_tiny_phi2.py  plot_export_with_args_kwargs.py  plot_export_with_auto.py  plot_export_with_dynamic_cache.py  plot_export_with_dynamic_shapes_auto.py  plot_export_with_modelbuilder.py  plot_failing_model_extract.py  plot_failing_onnxruntime_evaluator.py  plot_failing_reference_evaluator.py
_doc/final/: README.txt  plot_export_gemma3_tiny_input_observer.py  plot_export_optimind_input_observer.py  plot_export_tiny_llm_attention_input_observer.py  plot_export_tiny_llm_input_observer.py  plot_export_whisper_tiny_input_observer.py
_doc/recipes/: README.txt  plot_dynamic_shapes_json.py  plot_dynamic_shapes_max.py  plot_dynamic_shapes_nonzero.py  plot_dynamic_shapes_python_int.py  plot_export_dim1.py
_doc/status/: exported_program_dynamic.rst  exporter_dynamic.rst  index.rst  patches_coverage.rst  patches_diff.rst  patches_for_transformers.rst
_doc/technical/: plot_broadcast_export_issue.py  plot_gemm_or_matmul_add.py  plot_generate.py  plot_histc.py  plot_layer_norm_discrepancies.py  plot_matmul_reverse_engineering.py  plot_parallelized_reduction.py  plot_simple_for_loop.py
_dump_test_26/: sbs_qwen25_vli_visual.cpu.float32.LOOPMHA.custom.sh  test_qwen25_vli_visual.cpu.float32.LOOPMHA.custom.graph.ep.graph
_keep_dump_test/: test_qwen25_vli_visual.cpu.float32.LOOPMHA.custom.graph.ep.graph
_scripts/: compare_model_execution.py  export_qwen25_vl_visual.py  investigate.ipynb  qwen25_vl_visual.py  test_backend_onnxruntime.py
_small_data/: README.md
_unittests/ut_ci_models/: test_ci_export.py  test_ci_helpers.py
_unittests/ut_export/: test_api.py  test_cf_simple_loop_for.py  test_control_flow.py  test_control_flow_onnx.py  test_dynamic_shapes.py  test_experiment_jit.py  test_issue_2025.py  test_jit.py  test_onnx_plug.py  test_serialization.py  test_shape_helper.py  test_simple_cases.py  test_validate.py
_unittests/ut_helpers/: test_args_helper.py  test_bench_run.py  test_cache_helper.py  test_config_helper.py  test_doc_helper.py  test_dot_helper.py  test_fake_tensor_helper.py  test_graph_helper.py  test_helper.py  test_log_helper.py  test_memory_peak.py  test_mini_onnx_builder.py  test_model_builder_helper.py  test_onnx_helper.py  test_optim_helper.py  test_ort_session.py  test_ort_session_tinyllm.py  test_rt_helper.py  test_torch_helper.py  test_torch_test_helper.py
_unittests/ut_investigate/: test_input_observer.py  test_input_observer_transformers.py
_unittests/ut_reference/: test_array_tensor.py  test_backend_extended_reference_evaluator.py  test_backend_onnxruntime_evaluator.py  test_onnxruntime_evaluator.py  test_ort_evaluator.py  test_quantized_tensor.py  test_reference_back.py  test_reference_ops.py  test_torch_evaluator.py  test_torch_onnx_evaluator.py
_unittests/ut_tasks/: test_data.py  test_tasks.py  test_tasks_feature_extraction.py  test_tasks_image_classification.py  test_tasks_image_text_to_text.py  test_tasks_image_to_video.py  test_tasks_mask_generation.py  test_tasks_object_detection.py  test_tasks_summarization.py  test_tasks_text_generation.py  test_tasks_text_to_image.py  test_tasks_zero_shot_image_classification.py  try_export.py  try_tasks.py
_unittests/ut_torch_export_patches/: test_dynamic_class.py  test_eval.py  test_onnx_export_errors.py  test_patch_base_class.py  test_patch_details.py  test_patch_expressions.py  test_patch_helper.py  test_patch_inputs.py  test_patch_loops.py  test_patch_models.py  test_patch_module.py  test_patch_rewrite.py  test_patch_rewriting.py  test_patch_serialization.py  test_patch_serialization_diffusers.py  test_patch_serialization_transformers.py  test_patch_torch.py  test_patch_transformers.py
_unittests/ut_torch_models/: test_code_sample.py  test_hghub.py  test_hghub_api.py  test_hghub_mode_rewrite.py  test_hghub_model.py  test_llm_phi2.py  test_llms.py  test_llms_onnx.py  test_test_helpers.py  test_tiny_llms.py  test_tiny_llms_bypassed.py  test_tiny_llms_onnx.py  test_validate.py  test_validate_models.py  test_validate_whole_models.py  test_validate_whole_models1.py  test_validate_whole_models2.py  test_validate_whole_models3.py  test_validate_whole_models_unstable1.py  try_models.py  try_tasks.py
_unittests/ut_torch_onnx/: test_compare.py  test_discrepancies.py  test_runtime_info.py  test_sbs.py
_unittests/ut_xrun_doc/: test_args.py  test_check_ort_float16.py  test_command_lines.py  test_command_lines_exe.py  test_doc_doc.py  test_documentation_examples.py  test_documentation_final.py  test_documentation_recipes.py  test_documentation_technical.py  test_helpers.py  test_onnx_tools.py  test_ort_session.py  test_torch_test_helper.py  test_unit_test.py
onnx_diagnostic/: __init__.py  _command_lines_parser.py  api.py  cache_helper.py  cache_helpers.py  doc.py  ext_test_case.py  helper.py  helpers.py  onnx_tools.py  ort_session.py  torch_test_helper.py
onnx_diagnostic/ci_models/: ci_helpers.py  export_phi4_mm.py  export_qwen25_vl.py
onnx_diagnostic/export/: __init__.py  api.py  cf_simple_loop_for.py  control_flow.py  control_flow_onnx.py  control_flow_research.py  dynamic_shapes.py  onnx_plug.py  (+2 more)
(+145 files in other folders)
