[project]
name = "onnx-diagnostic"
version = "0.8.2"
description = "Tools to help converting pytorch models into ONNX."
readme = "README.rst"
authors = [
    { name = "Xavier Dupré", email = "xavier.dupre@gmail.com" }
]
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = []

[project.urls]
Homepage = "https://sdpython.github.io/doc/onnx-diagnostic/dev/"
Repository = "https://github.com/sdpython/onnx-diagnostic/"

[tool.setuptools.dynamic]
dependencies = {file = "requirements.txt"}

[tool.setuptools.package-data]
onnx_diagnostic = ["tasks/data/*.onnx"]

[tool.black]
line-length = 95
extend-exclude = '''.*clones.*'''

[tool.mypy]
ignore_missing_imports = true
packages = ["onnx_diagnostic"]
exclude = [
    "^_doc/auto_examples",  # skips examples in the documentation
    "^_doc/auto_recipes",  # skips examples in the documentation
    "^_doc/auto_technical",  # skips examples in the documentation
    "^_doc/conf.py",
    "^_doc/examples",
    "^_unittests",  # skips unit tests
    "^build",  # skips build
    "^dist",  # skips dist
]

[[tool.mypy.overrides]]
module = ["onnx_diagnostic.doc"]
disable_error_code = ["call-overload", "name-defined", "import-untyped"]

[[tool.mypy.overrides]]
module = ["onnx_diagnostic.ext_test_case"]
disable_error_code = ["arg-type", "assignment", "import-untyped", "misc", "name-defined", "override", "return-value", "truthy-function"]

[[tool.mypy.overrides]]
module = ["onnx_diagnostic.export.shape_helper"]
disable_error_code = ["name-defined"]

[[tool.mypy.overrides]]
module = ["onnx_diagnostic.helpers.args_helper"]
disable_error_code = ["arg-type", "call-overload", "index"]

[[tool.mypy.overrides]]
module = ["onnx_diagnostic.helpers.cache_helper"]
disable_error_code = ["name-defined"]

[[tool.mypy.overrides]]
module = ["onnx_diagnostic.helpers.helper"]
disable_error_code = ["arg-type", "assignment", "attr-defined", "call-overload", "misc", "name-defined", "union-attr"]

[[tool.mypy.overrides]]
module = ["onnx_diagnostic.helpers.fake_tensor_helper"]
disable_error_code = ["name-defined"]

[[tool.mypy.overrides]]
module = ["onnx_diagnostic.helpers.model_builder_helper"]
disable_error_code = ["attr-defined", "import-untyped", "name-defined", "union-attr", "var-annotated"]

[[tool.mypy.overrides]]
module = ["onnx_diagnostic.helpers.onnx_helper"]
disable_error_code = ["assignment", "arg-type", "name-defined", "union-attr"]

[[tool.mypy.overrides]]
module = ["onnx_diagnostic.helpers.ort_session"]
disable_error_code = ["union-attr"]

[[tool.mypy.overrides]]
module = ["onnx_diagnostic.reference.report_results_comparison"]
disable_error_code = ["name-defined"]

[[tool.mypy.overrides]]
module = ["onnx_diagnostic.reference.torch_ops.*"]
disable_error_code = ["override"]

[[tool.mypy.overrides]]
module = ["onnx_diagnostic.reference.torch_ops.controlflow_ops"]
disable_error_code = ["attr-defined", "name-defined"]

[[tool.mypy.overrides]]
module = ["onnx_diagnostic.reference.torch_ops._op_run"]
disable_error_code = ["name-defined"]

[[tool.mypy.overrides]]
module = ["onnx_diagnostic.torch_export_patches.*"]
disable_error_code = ["arg-type", "assignment", "attr-defined", "index", "misc", "name-defined", "operator", "return-value", "union-attr"]

[[tool.mypy.overrides]]
module = ["onnx_diagnostic.torch_models.*"]
disable_error_code = ["attr-defined", "call-overload", "operator"]

[tool.ruff]

# Exclude a variety of commonly ignored directories.
exclude = [
    ".eggs",
    ".git",
    "build",
    "dist",
    "onnxscript",
    "clones",
]

line-length = 95

[tool.ruff.lint]
# see https://docs.astral.sh/ruff/rules/
fixable = ["UP006", "UP035"]
unfixable = ["E731", "F401", "I001"]
select = [
    "B", # flake8-bugbear
    "C4", # flake8-comprehensions
    #"D", # pydocstyle
    "E", # pycodestyle
    "F", # Pyflakes
    "G", # flake8-logging-format
    #"I", # isort
    "ISC", # flake8-implicit-str-concat
    "LOG", # flake8-logging
    #"N", # pep8-naming
    #"NPY", # modern numpy
    #"PERF", # Perflint
    "PIE", # flake8-pie
    "PYI", # flake8-pyi
    "RUF", # Ruff-specific rules
    "SIM", # flake8-simplify
    "SLOT", # flake8-slot
    "T10", # flake8-debugger
    #"TID", # Disallow relative imports
    #"TRY", # flake8-try-except-raise
    "UP", # pyupgrade
    "W", # pycodestyle
    "YTT", # flake8-2020
]

[tool.ruff.lint.extend-per-file-ignores]
"**" = [
    "C401", "C408", "C413",
    "PYI041",
    "RUF010", "RUF012", "RUF100",
    "SIM102", "SIM103", "SIM108", "SIM114", "SIM910",
    "UP006", "UP015", "UP027", "UP031", "UP032", "UP034", "UP035"
]
"_doc/examples/plot_*.py" = ["E402", "B018", "PIE808", "SIM105", "SIM117"]
"_doc/notebooks/plot_*.py" = ["E402", "B018", "PIE808", "SIM105", "SIM117"]
"_doc/recipes/plot_*.py" = ["E402", "B018", "PIE808", "SIM105", "SIM117"]
"_scripts/compare_model_execution.py" = ["E402", "F401"]
"_doc/technical/plot_*.py" = ["E402", "B018", "PIE808", "RUF015", "SIM105", "SIM117"]
"_unittests/*/test*.py" = ["B008", "B904", "PIE808", "SIM117", "SIM105", "UP008"]
"onnx_diagnostic/export/__init__.py" = ["F401"]
"onnx_diagnostic/helpers/__init__.py" = ["F401"]
"onnx_diagnostic/reference/__init__.py" = ["F401"]
"onnx_diagnostic/reference/torch_ops/__init__.py" = ["F401"]
"onnx_diagnostic/torch_models/hghub/__init__.py" = ["F401"]
"onnx_diagnostic/torch_models/hghub/hub_data_cached_configs.py" = ["PIE804"]
"onnx_diagnostic/torch_models/validate.py" = ["E731"]
"onnx_diagnostic/torch_export_patches/__init__.py" = ["F401"]
"onnx_diagnostic/torch_export_patches/patches/__init__.py" = ["F401"]
"onnx_diagnostic/torch_models/llms.py" = ["F401"]
